creation de la page d'accueil

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mon gestionnaire de mots de passe</title>
 </head>
 <body>
-
+    <h1>Bienvenue dans ton coffre-fort web ! 🔐</h1>
 </body>
 </html>
