--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,6 +3,12 @@
 {% block content %}
 <h2>Connexion</h2>
 <form method="POST">
-    <!-- Formulaire de mot de passe maître ici -->
+    {{ form.hidden_tag() }}
+    <div class="mb-3">
+        {{ form.master_password.label(class="form-label") }}
+        {{ form.master_password(class="form-control") }}
+    </div>
+    <button type="submit" class="btn btn-primary">Se connecter</button>
 </form>
+
 {% endblock %}
