--- a/app/templates/secondary.html
+++ b/app/templates/secondary.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
-{% block title %}{{ title }}{% endblock %}
+
 {% block content %}
-<h2>{{ title }}</h2>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <div class="mb-3">
-        {{ form.secondary_password.label(class="form-label") }}
-        {{ form.secondary_password(class="form-control") }}
-    </div>
-    {{ form.submit(class="btn btn-primary") }}
-</form>
+<div class="container mt-5">
+    <h2>{{ title }}</h2>
+<form method="POST" action="{{ url_for('routes.unlock') }}">
+        {{ form.hidden_tag() }}
+        <div class="mb-3">
+            {{ form.secondary_password.label(class="form-label") }}
+            {{ form.secondary_password(class="form-control") }}
+        </div>
+        <button type="submit" class="btn btn-success">Déverrouiller</button>
+    </form>
+</div>
 {% endblock %}
