--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Connexion{% endblock %}
 {% block content %}
-<h2>Connexion</h2>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <div class="mb-3">
-        {{ form.master_password.label(class="form-label") }}
-        {{ form.master_password(class="form-control") }}
-    </div>
-    <button type="submit" class="btn btn-primary">Se connecter</button>
-</form>
-
+<div class="container mt-5">
+    <h2>Connexion</h2>
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        <div class="mb-3">
+            {{ form.master_password.label(class="form-label") }}
+            {{ form.master_password(class="form-control") }}
+        </div>
+        {{ form.submit(class="btn btn-primary") }}
+    </form>
+</div>
 {% endblock %}
