--- a/app/templates/secondary.html
+++ b/app/templates/secondary.html
@@ -1,15 +1,14 @@
 {% extends "base.html" %}
-
 {% block content %}
 <div class="container mt-5">
     <h2>{{ title }}</h2>
-<form method="POST" action="{{ url_for('routes.unlock') }}">
+    <form method="POST">
         {{ form.hidden_tag() }}
         <div class="mb-3">
             {{ form.secondary_password.label(class="form-label") }}
             {{ form.secondary_password(class="form-control") }}
         </div>
-        <button type="submit" class="btn btn-success">Déverrouiller</button>
+        {{ form.submit(class="btn btn-success") }}
     </form>
 </div>
 {% endblock %}
